Add limitations and future work

--- a/docs/spec/refs.bib
+++ b/docs/spec/refs.bib
@@ -99,7 +99,14 @@ author = {Thierry Coquand and Gérard Huet}
   author = {Jeremy Avigad and Leonardo de Moura and Soonho Kong},
   title = {Theorem Proving in Lean},
   howpublished = {\url{https://leanprover.github.io/theorem_proving_in_lean/}},
-  lastaccessed={April 18, 2021},
+  lastaccessed={April 18, 2021}
+}
+
+@misc{nbe,
+  author = {David Thrane Christiansen},
+  title = {Checking Dependent Types with Normalization by Evaluation: A Tutorial},
+  howpublished={\url{http://davidchristiansen.dk/tutorials/nbe/}},
+  lastaccessed={April 20, 2021}
 }
 
 @inproceedings{analysis_of_girard,
@@ -148,4 +155,57 @@ isbn="978-3-540-47586-6"
   timestamp = {Mon, 13 Aug 2018 16:48:06 +0200},
   biburl    = {https://dblp.org/rec/journals/corr/MouraAKR15.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{cic_bidi_typing,
+      title={Complete Bidirectional Typing for the Calculus of Inductive Constructions}, 
+      author={Meven Lennon-Bertrand},
+      year={2021},
+      eprint={2102.06513},
+      archivePrefix={arXiv},
+      primaryClass={cs.PL}
+}
+
+@techreport{coc_strong_norm_kripke,
+  title={A Proof of Strong Normalization for the Theory of Constructions Using a Kripke-Like Interpretation},
+  author={Thierry Coquand and Jean H. Gallier},
+  year=1990,
+  url={https://repository.upenn.edu/cis_reports/568/},
+  posted-at={2007-08-23}
+}
+
+@InProceedings{coc_strong_norm_short_flexible,
+author="Geuvers, Herman",
+editor="Dybjer, Peter
+and Nordstr{\"o}m, Bengt
+and Smith, Jan",
+title="A short and flexible proof of strong normalization for the calculus of constructions",
+booktitle="Types for Proofs and Programs",
+year="1995",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="14--38",
+isbn="978-3-540-47770-9"
+}
+
+@article{extended_coc,
+author = {Luo, Zhaohui},
+year = {1997},
+month = {07},
+pages = {},
+title = {An Extended Calculus of Constructions}
+}
+
+@InProceedings{simplification_of_girard,
+author="Hurkens, Antonius J. C.",
+editor="Dezani-Ciancaglini, Mariangiola
+and Plotkin, Gordon",
+title="A simplification of Girard's paradox",
+booktitle="Typed Lambda Calculi and Applications",
+year="1995",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="266--278",
+abstract="In 1972 J.-Y. Girard showed that the Burali-Forti paradox can be formalised in the type system U. In 1991 Th. Coquand formalised another paradox in U−. The corresponding proof terms (that have no normal form) are large. We present a shorter term of type ⊥ in the Pure Type System $\lambda$U− and analyse its reduction behaviour. The idea is to construct a universe U and two functions such that a certain equality holds. Using this equality, we prove and disprove that a certain object in U is well-founded.",
+isbn="978-3-540-49178-1"
 }
