change footnote on negation, top and bot

--- a/docs/spec/spec.tex
+++ b/docs/spec/spec.tex
@@ -17,9 +17,8 @@ The main aim of $\lambda C+$ is to implement a typed lambda calculus containing
 builtin types to encode the following logical connectives as per this
 correspondence
 \footnote{
-  Note that negation ($\neg$) and falsity ($\bot$) are not implemented in the
-  language though $\bot$ could easily be encoded as the empty type and $\neg A$
-  as $A \rightarrow \bot$.
+  Note that negation ($\neg$), falsity ($\bot$) and truth ($\top$) are not
+  implemented in the language.
 }
 
 \begin{enumerate}
